# GraphRAG

./: pyproject.toml
src/: prompts.py  query.py  settings.py
src/ingest/: ingestion.py  parser.py  query.py
