[project]
name = "graphrag"
version = "0.1.0"
description = ""
authors = [
    {name = "grct",email = "guerciamattiaa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-openai (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
